# Story-Generator

backend/: main.py  pyproject.toml
backend/core/: config.py
backend/models/: story.py
backend/routers/: story.py
backend/schemas/: job.py  story.py
